wrap app in container to fix justification

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-body {
+.container {
   width: 90vw;
   margin: 0 auto;
 }
